--- a/pkg/DESCRIPTION
+++ b/pkg/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: soil.spec
 Type: Package
-Title: Soil spectroscopy tools and reference models
-Version: 0.2.0
-Date: 2014-10-02
+Title: Soil Spectroscopy Tools and Reference Models
+Version: 2.1.4
+Date: 2014-12-17
 Author: Andrew Sila, Tomislav Hengl and Thomas Terhoeven-Urselmans
-Maintainer: Andrew Sila <asila@cgiar.org>
+Maintainer: Andrew Sila <a.sila@cgiar.org> 
 URL: http://worldagroforestry.org/research/land-health,
         http://www.africasoils.net/
-Description: A collection of functions (methods) and classes for processing and analyzing soil and plant infrared (MIR, alpha-MIR and VISNIR) spectroscopy readings based on the Africa Soil Information Services (AfSIS) project data.
+Description: Methods and classes for processing and analyzing soil and plant infrared (MIR, alpha-MIR and VISNIR) spectroscopy readings based on the Africa Soil Information Services (AfSIS) project data.
 Depends: R (>= 3.0)
 Imports: methods, stats, pls, KernSmooth, wavelets, hexView, sp, GSIF
 Suggests: e1071, class, chemometrics, plyr, plotKML, mgcv, nlme, spatstat, scales, date, lava, rgdal
